# video-qr-code-scanner

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
