cmake_minimum_required(VERSION 2.8)
project(video-qr-code-scanner)
if(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(OpenCV REQUIRED)
add_executable(video-qr-code-scanner main.cpp)
target_link_libraries(video-qr-code-scanner ${OpenCV_LIBS} ${ZBAR_LIBRARIES} zbar)
